set(CMAKE_C_STANDARD 90)
set(CMAKE_C_STANDARD_REQUIRED ON)

file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

list(FILTER SOURCES EXCLUDE REGEX "(/|\\\\|^)test_[^/\\\\]+\\.c$")
list(FILTER HEADERS EXCLUDE REGEX "(/|\\\\|^)test_[^/\\\\]+\\.h$")

add_library(Proj ${SOURCES} ${HEADERS})

include(GenerateExportHeader)
generate_export_header(Proj EXPORT_FILE_NAME ${CMAKE_CURRENT_BINARY_DIR}/lib_export.h EXPORT_MACRO_NAME LIB_EXPORT)

if (BUILD_SHARED_LIBS)
    target_compile_definitions(Proj PRIVATE LIB_EXPORTS)
endif()

set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
include(FetchContent)
set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
if(TARGET parson)
    message(STATUS "parson already provided by parent")
else()
    set(parson_RESOLVED OFF)
    if(VCPKG_TOOLCHAIN)
        find_package(parson CONFIG QUIET)
        if(parson_FOUND)
            set(parson_RESOLVED ON)
        endif()
    endif()
    if(NOT parson_RESOLVED)
        if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../../../../parson/CMakeLists.txt")
            FetchContent_Declare(parson SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../parson")
        else()
            FetchContent_Declare(parson GIT_REPOSITORY https://github.com/SamuelMarks/parson.git GIT_TAG master)
        endif()
        FetchContent_MakeAvailable(parson)
        if(NOT TARGET parson)
            add_subdirectory("${parson_SOURCE_DIR}" "${parson_BINARY_DIR}")
        endif()
        include_directories(SYSTEM "${parson_SOURCE_DIR}")
    endif()
endif()

if(TARGET c89stringutils)
    message(STATUS "c89stringutils already provided by parent")
else()
    set(c89stringutils_RESOLVED OFF)
    if(VCPKG_TOOLCHAIN)
        find_package(c89stringutils CONFIG QUIET)
        if(c89stringutils_FOUND)
            set(c89stringutils_RESOLVED ON)
        endif()
    endif()
    if(NOT c89stringutils_RESOLVED)
        if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../../../../c89stringutils/CMakeLists.txt")
            FetchContent_Declare(c89stringutils SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../c89stringutils")
        else()
            FetchContent_Declare(c89stringutils GIT_REPOSITORY https://github.com/offscale/c89stringutils.git GIT_TAG master)
        endif()
        FetchContent_MakeAvailable(c89stringutils)
        if(NOT TARGET c89stringutils)
            add_subdirectory("${c89stringutils_SOURCE_DIR}" "${c89stringutils_BINARY_DIR}")
        endif()
        include_directories(SYSTEM "${c89stringutils_SOURCE_DIR}/c89stringutils")
    endif()
endif()

if(TARGET c_str_span)
    message(STATUS "c_str_span already provided by parent")
else()
    set(c_str_span_RESOLVED OFF)
    if(VCPKG_TOOLCHAIN)
        find_package(c_str_span CONFIG QUIET)
        if(c_str_span_FOUND)
            set(c_str_span_RESOLVED ON)
        endif()
    endif()
    if(NOT c_str_span_RESOLVED)
        if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../../../../c-str-span/CMakeLists.txt")
            FetchContent_Declare(c_str_span SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../c-str-span")
        else()
            FetchContent_Declare(c_str_span GIT_REPOSITORY https://github.com/SamuelMarks/c-str-span.git GIT_TAG master)
        endif()
        FetchContent_MakeAvailable(c_str_span)
        if(NOT TARGET c_str_span)
            add_subdirectory("${c_str_span_SOURCE_DIR}" "${c_str_span_BINARY_DIR}")
        endif()
        include_directories(SYSTEM "${c_str_span_SOURCE_DIR}")
    endif()
endif()

if(TARGET c-abstract-http)
    message(STATUS "c-abstract-http already provided by parent")
else()
    set(c_abstract_http_RESOLVED OFF)
    if(VCPKG_TOOLCHAIN)
        find_package(c-abstract-http CONFIG QUIET)
        if(c-abstract-http_FOUND)
            set(c_abstract_http_RESOLVED ON)
        endif()
    endif()
    if(NOT c_abstract_http_RESOLVED)
        if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../../../../c-abstract-http/CMakeLists.txt")
            FetchContent_Declare(c-abstract-http SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../c-abstract-http")
        else()
            FetchContent_Declare(c-abstract-http GIT_REPOSITORY https://github.com/SamuelMarks/c-abstract-http.git GIT_TAG master)
        endif()
        FetchContent_MakeAvailable(c-abstract-http)
        if(NOT TARGET c-abstract-http)
            add_subdirectory("${c-abstract-http_SOURCE_DIR}" "${c-abstract-http_BINARY_DIR}")
        endif()
        include_directories(SYSTEM "${c-abstract-http_SOURCE_DIR}/include")
    endif()
endif()

target_link_libraries(Proj PUBLIC c-abstract-http)

target_include_directories(Proj PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
    $<INSTALL_INTERFACE:include>
)
